Bug #58426 Crashing tests not failing as they are supposed to on Solaris 10 debug

On this platform we seem to get lots of other signals
while waiting for SIGKILL to be delivered.

Solution: use sigsuspend(<all signals blocked>)